Implemented Tag Writing As long as the tag is NDEF-formatted and has at least one entry, the app can write data into it. Also added date-formatting for the timestamp, and fixed byte[] <-> long conversion to be right instead of very very wrong.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
                 <data android:mimeType="gatortag/time" />
             </intent-filter>
         </activity>
+        <activity android:name="org.ufosc.gatortag.WriteActivity">
+
+        </activity>
+
 
     </application>
 
